# task-manager-cli

./: README.md  pyproject.toml  requirements.txt
src/task-manager-cli/core/: task.py
src/task_manager_cli/cli/: cli.py  command_handler.py
src/task_manager_cli/core/: filters.py  task.py  taskManager.py  taskRepository.py
