[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-cli"
version = "0.1.0"
description = "A CLI-application to create, modify, filter, save, and print tasks."
authors = [{ name = "Jonas" }]
dependencies = []
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"] 
python_files = ["test_*.py"]
# pythonpath = ["unittest_training"]